--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
-[package]
+[workspace.package]
 name = "agora"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[workspace]
+resolver = "3"
+members = [
+    "http-parser"
+]
+
+[workspace.dependencies]
