--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,8 @@
-[workspace.package]
-name = "agora"
-version = "0.1.0"
-edition = "2024"
-
 [workspace]
 resolver = "3"
 members = [
-    "http-parser"
+    "agora-http-parser",
+    "agora-proxy"
 ]
 
 [workspace.dependencies]
