--- a/agora-proxy/Cargo.toml
+++ b/agora-proxy/Cargo.toml
@@ -3,4 +3,7 @@ name = "agora-proxy"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[dependencies] 
+tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread"] }
+tracing.workspace = true
+tracing-subscriber.workspace = true
