--- a/agora-proxy/Cargo.toml
+++ b/agora-proxy/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies] 
-tokio = { workspace = true, features = ["net", "macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
+agora-http-parser = {path = "../agora-http-parser"}
