--- a/agora-proxy/Cargo.toml
+++ b/agora-proxy/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { workspace = true, features = ["full"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
 agora-http-parser = {path = "../agora-http-parser"}
+http.workspace = true
