feat: set up reverse proxy config

--- a/agora-proxy/Cargo.toml
+++ b/agora-proxy/Cargo.toml
@@ -9,3 +9,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 agora-http-parser = {path = "../agora-http-parser"}
 http.workspace = true
+regex.workspace = true
