--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 http = "1.3.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 rstest = "0.26.1"
 
