--- a/agora-proxy/Cargo.toml
+++ b/agora-proxy/Cargo.toml
@@ -10,3 +10,5 @@ tracing-subscriber.workspace = true
 agora-http-parser = {path = "../agora-http-parser"}
 http.workspace = true
 clap.workspace = true
+serde.workspace = true
+serde_json.workspace = true
